@@ -11,10 +11,6 @@ AM_GCONF_SOURCE_2
 dnl check for python
 AM_PATH_PYTHON(2.3)
 
-#PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
-#AC_SUBST(PYGTK_CFLAGS)
-#AC_SUBST(PYGTK_LIBS)
-
 # ALL_LINGUAS=""
 
 # GETTEXT_PACKAGE=serpentine
